<resources>
    <string name="app_name">Weather App</string>
    <string name="less_2_symbols_length_error">The field cannot be less 2 symbols</string>

    <!--    Main-->
    <string name="cities_content_description">Cities list</string>
    <string name="settings_content_description">Settings</string>

    <!--    Search-->
    <string name="search">Search</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="find">Find</string>
    <string name="empty_data">Result is empty</string>

    <!--    Settings-->
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="cities_info_message">Enter city name and choose from list</string>

    <!--    Measure units-->
    <string name="celsius">℃</string>
    <string name="fahrenheit">℉</string>
    <string name="meter_per_second">m/s</string>
    <string name="mm_of_mercury">mmHg</string>
    <string name="in_of_mercury">inHg</string>

    <!--    Navigation menu-->
    <string name="weather">Weather</string>
    <string name="support">Support</string>
    <string name="about_developer">About developer</string>
    <string name="feedback">Feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="favorites">Favorites</string>


    <string name="empty">Here is empty yet</string>

    <string name="not_found_error_title">Object not found</string>
    <string name="not_found_error">Search object not found</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="history">History</string>

    <string name="network_connection_notification">Network connection notification</string>
    <string name="wifi_connection_disabled">Wi-Fi connection disabled</string>
    <string name="my_location">My location</string>

    <string name="authentication">Authentication</string>

</resources>
