<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".Interface.SettingsActivity">

    <TextView
        android:id="@+id/activity_settings__tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:text="@string/settings"
        android:textColor="@color/darkTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Switch
        android:id="@+id/activity_settings__sw_dark_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/dark_theme"
        android:textColor="@color/darkTheme"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintTop_toBottomOf="@id/activity_settings__tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/activity_settings__sw_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/pressure"
        android:textColor="@color/darkTheme"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintTop_toBottomOf="@id/activity_settings__sw_dark_theme"
        app:layout_constraintEnd_toEndOf="@id/activity_settings__sw_dark_theme"
        app:layout_constraintStart_toStartOf="@id/activity_settings__sw_dark_theme" />

    <Switch
        android:id="@+id/activity_settings__sw_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/wind"
        android:textColor="@color/darkTheme"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintTop_toBottomOf="@id/activity_settings__sw_pressure"
        app:layout_constraintEnd_toEndOf="@id/activity_settings__sw_dark_theme"
        app:layout_constraintStart_toStartOf="@id/activity_settings__sw_dark_theme" />

</androidx.constraintlayout.widget.ConstraintLayout>